// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VariableValidation render component for Fixed 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="valueType-0"
        >
          <label
            class="bp3-label"
            for="valueType"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="allowedValueTest_valueType"
            >
              common.configureOptions.validation
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="StyledProps--main"
            >
              
              <div
                class="RadioButtonGroup--inline"
              >
                <label
                  class="RadioButton--radio StyledProps--main"
                >
                  <input
                    checked=""
                    class="RadioButton--input"
                    name="valueType"
                    type="radio"
                    value="FIXED"
                  />
                  <span
                    class="RadioButton--radioIcon"
                  />
                  inputTypes.FIXED
                </label>
                <label
                  class="RadioButton--radio StyledProps--main"
                >
                  <input
                    class="RadioButton--input"
                    disabled=""
                    name="valueType"
                    type="radio"
                    value="FIXED_SET"
                  />
                  <span
                    class="RadioButton--radioIcon"
                  />
                  allowedValues
                </label>
                <label
                  class="RadioButton--radio StyledProps--main"
                >
                  <input
                    class="RadioButton--input"
                    disabled=""
                    name="valueType"
                    type="radio"
                    value="REGEX"
                  />
                  <span
                    class="RadioButton--radioIcon"
                  />
                  common.configureOptions.regex
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="fixedValue"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="allowedValueTest_fixedValue"
            >
              Fixed Value
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="fixedValue"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`VariableValidation render component for Fixed Set 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="valueType-0"
        >
          <label
            class="bp3-label"
            for="valueType"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="allowedValueTest_valueType"
            >
              common.configureOptions.validation
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="StyledProps--main"
            >
              
              <div
                class="RadioButtonGroup--inline"
              >
                <label
                  class="RadioButton--radio StyledProps--main"
                >
                  <input
                    class="RadioButton--input"
                    name="valueType"
                    type="radio"
                    value="FIXED"
                  />
                  <span
                    class="RadioButton--radioIcon"
                  />
                  inputTypes.FIXED
                </label>
                <label
                  class="RadioButton--radio StyledProps--main"
                >
                  <input
                    checked=""
                    class="RadioButton--input"
                    disabled=""
                    name="valueType"
                    type="radio"
                    value="FIXED_SET"
                  />
                  <span
                    class="RadioButton--radioIcon"
                  />
                  allowedValues
                </label>
                <label
                  class="RadioButton--radio StyledProps--main"
                >
                  <input
                    class="RadioButton--input"
                    disabled=""
                    name="valueType"
                    type="radio"
                    value="REGEX"
                  />
                  <span
                    class="RadioButton--radioIcon"
                  />
                  common.configureOptions.regex
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="defaultValue"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="allowedValueTest_defaultValue"
            >
              variables.defaultValue
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="defaultValue"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="allowedValues"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="allowedValueTest_allowedValues"
            >
              variables.allowedValues
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input bp3-tag-input"
            >
              <div
                class="bp3-tag-input-values"
              >
                <input
                  class="bp3-input-ghost"
                  data-mentions="kv-tag-input-allowedValues"
                  placeholder="Type and press enter to create a tag"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`VariableValidation render component for regex 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="valueType-0"
        >
          <label
            class="bp3-label"
            for="valueType"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="allowedValueTest_valueType"
            >
              common.configureOptions.validation
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="StyledProps--main"
            >
              
              <div
                class="RadioButtonGroup--inline"
              >
                <label
                  class="RadioButton--radio StyledProps--main"
                >
                  <input
                    class="RadioButton--input"
                    name="valueType"
                    type="radio"
                    value="FIXED"
                  />
                  <span
                    class="RadioButton--radioIcon"
                  />
                  inputTypes.FIXED
                </label>
                <label
                  class="RadioButton--radio StyledProps--main"
                >
                  <input
                    class="RadioButton--input"
                    disabled=""
                    name="valueType"
                    type="radio"
                    value="FIXED_SET"
                  />
                  <span
                    class="RadioButton--radioIcon"
                  />
                  allowedValues
                </label>
                <label
                  class="RadioButton--radio StyledProps--main"
                >
                  <input
                    checked=""
                    class="RadioButton--input"
                    disabled=""
                    name="valueType"
                    type="radio"
                    value="REGEX"
                  />
                  <span
                    class="RadioButton--radioIcon"
                  />
                  common.configureOptions.regex
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="regExValues"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="allowedValueTest_regExValues"
            >
              common.configureOptions.regex
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <textarea
              autocomplete="off"
              class="bp3-input bp3-fill"
              maxlength="1024"
              name="regExValues"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
